tried to fix dark mode

--- a/style.css
+++ b/style.css
@@ -108,3 +108,23 @@ footer {
   background-color: #131313;
   color: #fff5fa;
 }
+
+#theme-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
+.dark-mode header {
+  background-color: #333;
+}
+
+.dark-mode button {
+  background-color: #444;
+  color: white;
+}
